finished help menu, lock and unlock black squares, added confirm dialog when potentially deleting current puzzle, fixed spacing on stupid edit mode buttons

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 
 .toolPanel {
   text-align: center;
-  margin: 10px 0 30px 0;
+  margin: 0 0 10px 0;
 }
 
 .toolTitle {
@@ -111,4 +111,8 @@
   padding-left:10px;
   padding-top:5px;
   text-transform: uppercase;
+}
+
+.center-pills {
+  display:inline-block;
 }
